--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,16 @@ data/
 models/
 features/
 
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
 # Distribution / packaging
 .Python
 build/
